--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~12.1.0-",
     "@angular/router": "~12.1.0-",
     "@sweetalert2/ngx-sweetalert2": "^11.0.0",
+    "ngx-ui-loader": "^13.0.0",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.4.24",
     "tslib": "^2.2.0",
